# cmake_book

./: CMakeLists.txt  delete.sh  main.cpp  second.cpp
app/: CMakeLists.txt  main.cpp
include/: second.h
src/: second.cpp
